--- a/index.html
+++ b/index.html
@@ -1,6 +1,106 @@
-<html>
-<title>Gamers Who Code</title>
-<body>
-<h3>Welcome Gamers Who code</h3>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+
+    <head>
+        <meta charset="utf-8">
+        <title>Gamers Who Code</title>
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/index.css" rel="stylesheet">
+    </head>
+
+
+    <body>
+
+        <div id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+
+            <!-- Navigation -->
+            <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+                <div class="container">
+                    <div class="navbar-header page-scroll">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand page-scroll" href="#page-top">Gamers Who Code</a>
+                    </div>
+
+
+                    <div class="collapse navbar-collapse navbar-ex1-collapse">
+                        <ul class="nav navbar-nav">
+                            <li>
+                                <a class="" href="#tutorials">Tutorials</a>
+                            </li>
+                            <li>
+                                <a class="" href="#about">About</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+
+        <div class="container content">
+            <div class="row">
+
+                <div id="tutorials" class="tutorials-section">
+                    <div class="container">
+                        <div class="row">
+                            <p class="col-lg-12">
+
+                            <h1>Tutorials Section</h1>
+                            <ul>
+                                <li>
+                                    <a href="https://github.com/gamerswhocode/rawr-invaders">rawr-invaders</a>
+                                </li>
+                            </ul>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div id="about" class="about-section">
+                    <div class="container">
+                        <div class="row">
+                            <p class="col-lg-12">
+
+                            <h1>About Section</h1>
+
+                            <p>
+                                Gamers who code is community of gamers, designers, developers. We are gaming enthusiasts. Our community principles are:
+                            </p>
+                            <ul>
+                                <li>Community</li>
+                                <li>Knowledge</li>
+                                <li>Fun</li>
+                                <li>Games</li>
+                                <li>Coding</li>
+                            </ul>
+
+
+                            <p>
+                            It was born on July 2015.
+                            </p>
+
+                            <p>
+                            Our mission is to develop games for fun and share our knowledge to the world!
+                            </p>
+                            <p>
+                            Our vision is to be the greatest and social committed community of gamers who code.
+                            </p>
+                            <p>
+                            We meet @ Bitcenter, Ensenada each Friday at 6pm
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <script src="js/jquery.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+    </body>
+
 </html>
