--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <head>
         <meta charset="utf-8">
         <title>Gamers Who Code</title>
-        <link href="css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/index.css" rel="stylesheet">
+        <link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
+        <link href="{{ site.baseurl }}/css/index.css" rel="stylesheet">
     </head>
 
 
@@ -99,8 +99,8 @@
             </div>
         </div>
 
-        <script src="js/jquery.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+        <script src="{{ site.baseurl }}/js/jquery.min.js"></script>
+        <script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
     </body>
 
 </html>
