--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ layout: default
                     </p>
 
                     <p>
-                        We meet @ Bitcenter, Ensenada each Friday at 6pm
+                        We meet @ Bitcenter Ensenada each Friday at 6pm, at the Dinosaur Office ... RaWr
                     </p>
                 </div>
             </div>
