added img to site

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@ layout: default
                     <p>
                         We meet @ Bitcenter Ensenada each Friday at 6pm, at the Dinosaur Office ... RaWr
                     </p>
+
+                    <img src="https://raw.githubusercontent.com/gamerswhocode/site/gh-pages/img/gamerswhocode_social.png"/>
                 </div>
             </div>
         </div>
