added about social img

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@ layout: default
                     </p>
 
                     <p>
-                        We meet @ Bitcenter Ensenada each Friday at 6pm, at the Dinosaur Office ... RaWr
+                        We meet @ Bitcenter, Ensenada each Friday at 6pm
                     </p>
 
-                    <img src="https://raw.githubusercontent.com/gamerswhocode/site/gh-pages/img/gamerswhocode_social.png"/>
+                    <img class="about-social" src="https://raw.githubusercontent.com/gamerswhocode/site/gh-pages/img/gamerswhocode_social.png" />
                 </div>
             </div>
         </div>
