--- a/index.html
+++ b/index.html
@@ -2,65 +2,151 @@
 layout: default
 ---
 
-<div class="container content">
-    <div class="row">
+<section class="section header-section">
+    <div class="color-overlay">
+        <div class="container">
+            <div>
+                <a href="https://www.facebook.com/GamersWhoCode" target="_blank"><i class="header-icon  header-icon-effect sub-circle fa fa-facebook-square "></i></a>
+                <a href="http://twitter.com/gamerswhocode" target="_blank"><i class="header-icon  header-icon-effect sub-circle fa fa-twitter-square "></i></a>
+                <a href="https://github.com/gamerswhocode" target="_blank"><i class="header-icon  header-icon-effect sub-circle fa fa-github-square"></i></a>
+                <!-- <a href="#"><i class="header-icon  header-icon-effect sub-circle fa fa-google-plus-square "></i></a> -->
+            </div>
 
-        <div id="tutorials" class="tutorials-section">
-            <div class="container">
-                <div class="row">
-                    <p class="col-lg-12">
+            <div class="header-text">
+                <h1>
+                    <span>
+                        Gamers who code is a community of gamers, designers and developers.
+                    </span>
+                </h1>
+            </div>
+        </div>
+    </div>
+</section>
 
-                    <h1>Tutorials Section</h1>
-                    <ul>
-                        <li>
-                            <a href="https://github.com/gamerswhocode/rawr-invaders" target="_blank">rawr-invaders</a>
-                        </li>
-                    </ul>
 
-                </div>
+<section>
+
+    <div class="container">
+
+        <div class="row">
+            <div class="section-heading">
+                <h2>We are gaming enthusiasts.</h2>
+                <h4>Our community principles are...</h4>
             </div>
         </div>
 
-        <div id="about" class="about-section">
-            <div class="container">
-                <div class="row">
-                    <p class="col-lg-12">
+        <div class="row">
+            <div class="col-md-3 col-sm-6">
+                <div class="single-feature border-from-bottom">
+                    <div class="feature-icon">
+                        <i class="fa fa-users"></i>
+                    </div>
 
-                    <h1>About Section</h1>
-
-                    <p>
-                        Gamers who code is community of gamers, designers, developers. We are gaming enthusiasts. Our community principles are:
-                    </p>
-                    <ul>
-                        <li>Community</li>
-                        <li>Knowledge</li>
-                        <li>Fun</li>
-                        <li>Games</li>
-                        <li>Coding</li>
-                    </ul>
-
-
-                    <p>
-                        It was born on July 2015.
-                    </p>
-
-                    <p>
-                        Our mission is to develop games for fun and share our knowledge to the world!
-                    </p>
-
-                    <p>
-                        Our vision is to be the greatest and social committed community of gamers who code.
-                    </p>
-
-                    <p>
-                        We meet @ Bitcenter, Ensenada each Friday at 6pm
-                    </p>
-
-                    <img class="about-social" src="https://raw.githubusercontent.com/gamerswhocode/site/gh-pages/img/gamerswhocode_social.png" />
+                    <div class="feature-content">
+                        <h3>Community</h3>
+                    </div>
                 </div>
             </div>
-        </div>
+
+
+            <div class="col-md-2 col-sm-6">
+                <div class="single-feature border-from-bottom">
+                    <div class="feature-icon">
+                        <i class="fa fa-graduation-cap"></i>
+                    </div>
+
+                    <div class="feature-content">
+                        <h3>Knowledge</h3>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="col-md-2 col-sm-6">
+                <div class="single-feature border-from-bottom">
+                    <div class="feature-icon">
+                        <i class="fa fa-smile-o"></i>
+                    </div>
+
+                    <div class="feature-content">
+                        <h3>Fun</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-2 col-sm-6">
+                <div class="single-feature border-from-bottom">
+                    <div class="feature-icon">
+                        <i class="fa fa-gamepad"></i>
+                    </div>
+                    <div class="feature-content">
+                        <h3>Games</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3 col-sm-6">
+                <div class="single-feature border-from-bottom">
+                    <div class="feature-icon">
+                        <i class="fa fa-code"></i>
+                    </div>
+
+                    <div class="feature-content">
+                        <h3>Coding</h3>
+                    </div>
+                </div>
+            </div>
+     </div>
+
 
     </div>
-</div>
+</section>
 
+
+
+<section class="section-bg-color">
+    <div class="container">
+        <div class="row">
+            <div class="section-heading">
+                <h2>It was born on July 2015</h2>
+            </div>
+
+        </div>
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="section-heading text-left">
+                    <h5>Our mission</h5>
+                    <p>
+                        Develop games for fun and share our knowledge to the world!
+                    </p>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="section-heading text-left">
+                    <h5>Our vision</h5>
+                    <p>
+                        Be the greatest and social committed community of gamers who code.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+<section class="testimonial-section">
+    <div class="container">
+        <div class="section-heading">
+            <h2>Join us!</h2>
+            <h3>We meet @ BitCenter, Ensenada each friday at 6 pm</h3>
+
+            <div class="col-md-12">
+                <div class="fa fa-envelope"> gamerswhocode@gmail.com</div>
+            </div>
+
+        </div>
+    </div>
+</section>
