--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><title>GWC</title><base href="/"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="description" content=""><meta name="author" content="sterlux-dev"><link rel="icon" type="image/x-icon" href="favicon.ico"><link href="styles.5411bc8143e6aa7be299.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><script type="text/javascript" src="inline.2f6aa30fc853be637e1f.bundle.js"></script><script type="text/javascript" src="polyfills.ad37cd45a71cb38eee76.bundle.js"></script><script type="text/javascript" src="scripts.c490de60a5e32df3d4c6.bundle.js"></script><script type="text/javascript" src="main.57136e086d06517efde7.bundle.js"></script></body><script src="assets/js/agency.min.js"></script></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>GWC</title>
+  <base href="/">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="sterlux-dev">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
+<body>
+  <app-root></app-root>
+<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="scripts.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
+<script src="assets/js/agency.min.js"></script>
+</html>
